2001-10-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-terminal-coding-system): Changed default value
	for w3m(en).
	(w3m-input-coding-system): Ditto.
	(w3m-default-coding-system): Ditto.
	(w3m-iso-latin-1-decoder): Fixed for latin-iso8859-1 under old Emacsen.
	(w3m-ccl-write-repeat): Ditto.

2001-10-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Imcremented to `1.2rc4'.

2001-10-29  ORI Manabu <ori@tahoo.org>

	* w3m.el (w3m-type): Added the expression to detect `w3m-m17n'.

2001-10-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-accept-japanese-characters): Use `-halfdump' option
	instead of `-dump' option in order to detect the real internal
	character set of `w3m-command'.
	(w3m-profile-directory): Fixed the expression to determine the
	default value for the environment where `w3m-command' includes
	redundant suffixes.
	(w3m-default-save-directory): Ditto.
	(w3m-euc-japan-encoder): Define in the old-style backquote.
	(w3m-iso-latin-1-encoder): Ditto.

	* w3m.el (emacs-w3m-version): Imcremented to `1.2rc3'.
	(w3m-use-mule-ucs): Simplified.
	(w3m-ccl-write-repeat): Fixed.
	(w3m-euc-japan-decoder): Ditto.

2001-10-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-ccl-write-repeat): Avoid a byte-compile warning.

2001-10-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-info-like-map): Bind `\M-g' as the key to call
	`goto-line'.

	* Makefile.in (tarball): Official tarball contains patch/
	subdirectory.

	* w3m-xmas.el (TOP): Doesn't require `pccl' for XEmacs which lacks
	MULE.

	* w3m.el (emacs-w3m-version): Imcremented to `1.2rc2'.
	(w3m-accept-japanese-characters): Improved automatic detection.
	(w3m-ccl-write-repeat): Fix typo.

	* w3m.el (w3m-mnc): Abolished.
	(w3m-type): Use the default value which detected automatically;
	Removed `w3m-mnc' from legal values which is specified in its
	customize spec.
	(w3m-use-mule-ucs): Follow change in the customize spec of
	`w3m-type'.